2008-08-15  Vadim Kurland  <vadim@vk.crocodile.org>

	* Preprocessor.cpp (Preprocessor::isUsedByThisFirewall): fixed bug
	#2051629: "group with dns names are handled as empty". This bug
	triggered when object group that consisted of DNSName objects set
	to resolve at compile time was used in policy rule and at the same
	none of these DNSName objects were used in rules. If an object
	from the group was itself used in a rule, compiler properly
	converted it to address. But object was never used in rules by
	itself, it was not converted.

2008-08-12  Vadim Kurland  <vadim@vk.crocodile.org>

	* Tools.cpp: Getting rid of sprintf, using ostringstream

	* Rule.cpp (PolicyRule::removeRef): fixed bug #2047991 "Drag &
	Drop in CHAIN actions, version 3". THe bug report consits of 3
	parts, part 3 is "When I change the Action from CHAIN to ACCEPT
	and switch it back to CHAIN it still shows the last policy target
	I used. EVEN WHEN I DELETED this object meanwhile. I manually have
	to remove the policy object from the properties of the CHAIN
	action.". PolicyRule::removeRef removes references to RuleSets and
	TagSErvice objects from rule options when corresponding RuleSet or
	TagService object is deleted.

2008-08-03  Vadim Kurland  <vadim@vk.crocodile.org>

	* Address.h (libfwbuilder): removed return type qualifier "const"
	from bool HasInetAddress() (no point in making it "const
	bool"). Gcc 4.3 issued warning on this

2008-07-27  Vadim Kurland  <vadim@vk.crocodile.org>

	* FWObject.cpp (FWObject::replaceRef): moved replaceRef method
	from Firewall to FWObject so it can be used for both firewalls and
	groups.

	* FWObject.cpp (FWObject::findDependencies): method that generates
	list of pointers to the objects referenced by <this>, such
	asobjects used in rules and groups.

2008-07-26  Vadim Kurland  <vadim@vk.crocodile.org>

	* FWObjectDatabase.cpp (FWObjectDatabase::init_id_dict):
	registering standard string ids for standard objects, deleted
	objects and templates libraries.